lab1/Test/L1-A-13-44.output
Error Type A at Line 1
Error Type B at Line 3
Error Type B at Line 5
Error Type B at Line 9
Error Type B at Line 10
Error Type B at Line 10
Error Type B at Line 13
Error Type B at Line 25
Error Type B at Line 31
