lab1/Test/L1-A-13-44.cmm
int ;~
int ;
int RK_XwRB3k19kbb6gN2_7 while ( ) {
  if ( OVTI3keX1D0R_Gi )   F7gGz27QVfwRAtu6 
else   o3D5YzLlrCJEn6 ;

{
    struct zw {
    }be7e ;&& 
)     int while i7j ;
  }}
int ;
struct int sf8bs5fdzaUqVDLQs ;
int zKPjGAExQydAReBccAE ;
int oTZroqIPq ;
struct Oj5zP1RdXIbJwxo1Cr qm82Xb2lXs72yNq6Nbl ;
int KVqhsut2swLI6OWXjpmG ;
int ahcxiDCC84WjC , tZ_9OmHG ;
int MDh = a6hOTbL ;
};
float qoC [ 583900044 ] 
;
int xMpTfJNLjwi9twR ( struct QRNBIiIoL gH09qTuM ) 
  {
  if ( x3GjTEk1bKQ   while ( U76AyBke0sJVLuEZ )   return 
    dnIbSeDHpSA2__wUvU ;

else   if ( k )   TFHaYHXnQ3TrY7H = O556J8n9i || AU 
    == L_K5ndjPZyXse5j2JLz + WKJV / ! - wJ1X3uwiTyfsnY_I9 
    ( cIxnfmTPdc_G9PpHm , p39voBR0nbPkcazjRMg && ! ! ZCgbbY 
    [ mrA0us && != iPaWaZEVSs8obJ3JfhW - AfgZqMOFcCGyksxf 
    [ UblI0rBZbyTW95HONds && vpf0HoqaMoyUU6vxd_ <= - ! 
    - - ! ! wUvD [ Q > KcLcEqdoa9gTU1I * ( CVe2W6hXjvtiqUz9Qut 
    = B4Gp_up8ds83L8nL = j4fe60alWfa0vavaY_ = j1lq8p3e8 
    >= gG7lTkp7V_CIwawuBo + F_cK_Y4z3zlg720z [ k9wBC784NWhRa4uUYRME 
    && qCkJe < vePMtdT - ! uMbLN4BXy ( y3xWjaEdgara7jM_WTg 
    || ixQe8Dg3 && pp0yX7zV9nwQtooXdITI - QSwSuFtY9V9a7tf 
    / XcHQjK7IrnT_ESCKZ [ Fr * ! L_ddjAh [ r30Q35dxjhI 
    || Pj9MciSPZwgRtWLC != mWOixu3tJPODx - 2089208187 
    . hJ8eUzJkIIqj > 289834260.815157442 . M ] ] ) ] ) 
    ] ] . ifEflZh16R2bQGLUgCi * - ! Bf9OMfN1zj ( ) ] ) 
    * pTs8YgXBob8dN ;


}
int ugy , eB3PKoZTDe4OZvQfNJ_w 

;
int ;
int ;
int EaantDU0ZanLarFcu0kT ( int fq , int s7O97 ) {
}
